add mysql datasource and fix bugs with async proxy